--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product listing</title>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.2/dist/normalizr.browser.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"
     integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
@@ -41,12 +42,14 @@
             <input type="text" id="alias" placeholder="Alias" class="border border-primary rounded-3 mx-1" required>
             <input type="text" name="text" id="text" placeholder="Write your message" class="border border-primary rounded-3 mx-1">
             <input type="text" id="avatar" placeholder="avatar" class="border border-primary rounded-3 mx-1" required>
-            <input type="submit" name="" id="chatForm" value="Send" class="btn btn-dark border-primary mx-1">
+            <input type="button" id="chatForm" value="Send" class="btn btn-dark border-primary mx-1">
         </form>
         <div id="messages" class="d-flex align-items-center border border-primary rounded-3 flex-column" style="max-width: 600px; margin: 10px auto" >
         </div>
+        <div id="reduct" class="d-flex align-items-center border border-primary rounded-3 flex-column" style="max-width: 600px; margin: 10px auto" >
+        </div>
     </div>
     <script src="../js/socket.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
 </html>
